# example-website-summarization-agent-py

./: .gitignore  README.md  pyproject.toml
automatic_retries/: README.md
crash_recovery/: README.md  pyproject.toml
part-1/: README.md  pyproject.toml
part-1/src/summarize/: app.py
part-2/src/: app.py
src/: app.py  gateway.py
