[project]
name = "example-website-summarization-ai-agent"
version = "0.1.0"
description = "Website summarization agent with Resonate, Flask, and Ollama."
authors = [
    { name = "Cully Wakelin", email = "flossypurse@gmail.com" }
]
dependencies = [
    "resonate-sdk>=0.5.6",
    "flask>=3.0.3",
    "selenium>=4.26.1",
    "bs4>=0.0.2",
    "ollama>=0.3.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
    "gateway" = "src.gateway:main"
    "app" = "src.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src"]
